istio-demo/service-1-v1/k8s/service-1-v1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-1-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service-1
      version: v1
  template:
    metadata:
      labels:
        app: service-1
        version: v1
    spec:
      containers:
        - name: service-1
          image: gcr.io/istio-demo-project-440716/service-1-v1:latest
          ports:
            - containerPort: 8080
