istio-demo/service-1-v1/k8s/service-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-1
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: service-1
