istio-demo/service-1-v1/k8s/service-1-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: service-1-gateway
  namespace: sumanns
spec:
  selector:
    istio: ingressgateway  # Default Istio Ingress Gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
