istio-demo/service-1-v1/k8s/service-1-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: service-1-destinationrule
  namespace: sumanns
spec:
  host: service-1.sumanns.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
