istio-demo/service-1-v1/k8s/service-1-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-1-virtualservice
  namespace: sumanns
spec:
  hosts:
  - "*"
  gateways:
  - service-1-gateway
  http:
  - match:
    - uri:
        exact: /hello
    route:
    - destination:
        host: service-1.sumanns.svc.cluster.local
        subset: v1
        port:
          number: 80
      weight: 80
    - destination:
        host: service-1.sumanns.svc.cluster.local
        subset: v2
        port:
          number: 80
      weight: 20
